--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
     "@angular/material": "^14.2.4",
     "@angular/platform-browser": "^14.2.5",
     "@angular/platform-browser-dynamic": "^14.2.5",
+    "@angular/platform-server": "^14.2.5",
     "@angular/router": "^14.2.5",
     "@angular/service-worker": "^14.2.5",
-    "angular-split": "^14.0.0"
+    "@nguniversal/express-engine": "^14.2.0",
+    "angular-split": "^14.0.0",
+    "express": "^4.15.2"
   },
   "devDependencies": {
+    "@nguniversal/builders": "^14.2.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/express": "^4.17.0",
+    "@types/node": "^14.15.0",
     "autoprefixer": "^10.4.12",
     "http-server": "^14.1.1",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
   },
-  "name": "dummy",
+  "name": "brandrocket",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -32,6 +38,10 @@
     "test": "ng test",
     "sw": "ng s --host 192.168.0.183 -o",
     "surge": "ng build && cd dist/brandrocket && surge --project . --domain https://contentkingav.surge.sh",
-    "surge-d": "cd dist/brandrocket && surge --project . --domain https://contentkingav.surge.sh"
+    "surge-d": "cd dist/brandrocket && surge --project . --domain https://contentkingav.surge.sh",
+    "dev:ssr": "ng run brandrocket:serve-ssr",
+    "serve:ssr": "node dist/brandrocket/server/main.js",
+    "build:ssr": "ng build && ng run brandrocket:server",
+    "prerender": "ng run brandrocket:prerender"
   }
 }
