--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng": "ng",
     "start": "ng s -o",
     "build": "ng build",
+    "build-dev": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "sw": "ng s --host 192.168.0.183 -o",
@@ -42,6 +43,7 @@
     "dev:ssr": "ng run brandrocket:serve-ssr",
     "serve:ssr": "node dist/brandrocket/server/main.js",
     "build:ssr": "ng build && ng run brandrocket:server",
-    "prerender": "ng run brandrocket:prerender"
+    "prerender": "ng run brandrocket:prerender",
+    "vercel-bulid": "npm run build:ssr"
   }
 }
