--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@angular/service-worker": "^14.2.5",
     "@nguniversal/express-engine": "^14.2.0",
     "angular-split": "^14.0.0",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "html-to-image": "^1.10.8"
   },
   "devDependencies": {
     "@nguniversal/builders": "^14.2.0",
